[package]
name = "skipjack"
version = "0.2.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "A straight-line implementation of Skipjack in Rust"
license-file = "LICENSE"
homepage = "https://github.com/woodruffw/skipjack.rs"

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions

[dependencies]
